--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     required
                                     type="password"
                                     name="password"
-                                    placeholder="password"
+                                    placeholder="Password"
                                     class="form__input"
                                 />
                             </div>
