--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                             <div class="form__actions">
                                 <button type="submit" class="form__buttom">Create account</button>
                                 <div class="form__or"><span>or</span></div>
-                                <a href="#" class="form__gogle"><span>Sign up with Google</span></a>
+                                <a href="#" class="form__google"
+                                    ><span>Sign up with Google</span></a
+                                >
                             </div>
                         </form>
                         <div class="account__login">
