--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                             </div>
                             <div class="form__actions">
                                 <button type="submit" class="form__buttom">Create account</button>
-                                <div class="form__or"><span>or</span></div>
+                                <div class="form__or"><span class="form__span">or</span></div>
                                 <a href="#" class="form__google"
-                                    ><span>Sign up with Google</span></a
+                                    ><span class="form__google-span">Sign up with Google</span></a
                                 >
                             </div>
                         </form>
